--- a/templates/historial/formulario-clientes.html
+++ b/templates/historial/formulario-clientes.html
@@ -14,28 +14,36 @@
 
                         <div class="campo">
                             <label>Nombres</label>
-                            <input type="text">
+                            {{ form.nombre }}
                         </div>
                         
                         
                         <div class="campo">
                             <label>Apellidos</label>
-                            <input type="text">
+                            {{ form.apellidos }}
                         </div>
                         
                         <div class="campo">
                             <label>Cedula</label>
-                            <input type="number">
+                            {{ form.cedula }}
                         </div>
                         
                         <div class="campo">
                             <label>Dirección</label>
-                            <input type="text">
+                            {{ form.direccion }}
                         </div>
                         
                         <div class="campo">
                             <label>Telefono</label>
-                            <input type="number">
+                            {{ form.telefono }}
+                        </div>
+                        <div class="campo">
+                            <label>Edad</label>
+                            {{ form.edad }}
+                        </div>
+                        <div class="campo">
+                            <label>Sexo</label>
+                            {{ form.sexo }}
                         </div>
                         
                     </div>
