--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -225,6 +225,7 @@ main .insights{
 main .insights > div {
     background: var(--color-white);
     padding: var(--card-padding);
+    overflow: auto;
     border-radius: var(--card-border-radius);
     margin-top: 1rem;
     box-shadow: var(--box-shadow);
