--- a/templates/administrador/admin_admin.html
+++ b/templates/administrador/admin_admin.html
@@ -65,7 +65,7 @@
                             {{ form.password1 }}
                         </div>
                         <div class="espacio">
-                            <label>Contraseña</label>
+                            <label>Repetir Contraseña</label>
                             {{ form.password2 }}
                         </div>
                         <div class="espacio">
