--- a/templates/ventas/formularioFactura.html
+++ b/templates/ventas/formularioFactura.html
@@ -12,20 +12,28 @@
                 <h1>Registrar Factura</h1>
                 <br>
                 <h2 class="h2agrega">Agrega productos a tu factura.</h2>
-                <a href="" class="add">Agregar producto.</a>
+                <!-- <a href="" class="add">Agregar producto.</a> -->
     
                 <div id="formularioventas">
                     <div class="campo">
                         <label for="id" class="label">ID</label>
-                        <input type="number" for="id" class="input-id"> 
+                        {{ form.numero_factura }}
                     </div>
                     <div class="campo">
-                        <label for="fecha" class="label">Fecha</label>
-                        <input type="date" for="fecha" class="input-id">
+                        <label for="fecha" class="label">Cliente</label>
+                        {{ form.duenio }}
+                    </div>
+                    <div class="campo">
+                        <label for="total" class="label">Producto</label>
+                        {{ form.producto }}
+                    </div>
+                    <div class="campo">
+                        <label for="total" class="label">Vendedor</label>
+                        {{ form.vendedor }}
                     </div>
                     <div class="campo">
                         <label for="total" class="label">Total</label>
-                        <input type="number" for="total" class="input-id">
+                        {{ form.total }}
                     </div>
                 </div>
                 <input type="submit" class="btn" value="Registrar">
