--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -45,7 +45,7 @@
             <td>
               <a class="fa-solid fa-crop" href="{% url 'ventas_app:update' p.id %}"></a>
               <a class="fa-regular fa-trash-can" href="javascript:abrir()"></a>
-              <button class="agregar-carrito">Agregar al carrito</button>
+              <a class="agregar-carrito" href="{% url 'ventas_app:agregarCarro' p.id %}">Agregar al carrito</a>
             </td>
           </tr>
           
