Facturacion y carrito funcionales

--- a/templates/administrador/reporteAdmin.html
+++ b/templates/administrador/reporteAdmin.html
@@ -8,7 +8,7 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a class="boton">Reporte 10 productos mas Vendidos</a>
+            <a href="{% url 'ventas_app:reporteUno' %}" class="boton">Reporte 10 productos mas Vendidos</a>
             <a class="boton">Reporte clientes con mayor facturacion</a>
             <a class="boton">Reporte ventas por rango de fechas</a>
         </div>
