--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
                         <tbody></tbody>  <!--AQUI VA PYTHON-->
                     </table>
                     <br>
-                    <a href="#" id="vaciar-carrito" class="generar">Generar Factura</a>
+                    <a href="{% url 'ventas_app:MiCarro' %}" id="vaciar-carrito" class="generar">Generar Factura</a>
                 </div>
             </div>         
             <div class="theme-toggler">
