--- a/templates/ventas/formularioFactura.html
+++ b/templates/ventas/formularioFactura.html
@@ -17,23 +17,23 @@
                 <div id="formularioventas">
                     <div class="campo">
                         <label for="id" class="label">ID</label>
-                        {{ form.numero_factura }}
+                        <input type="text">
                     </div>
                     <div class="campo">
                         <label for="fecha" class="label">Cliente</label>
-                        {{ form.duenio }}
+                        <input type="text">
                     </div>
                     <div class="campo">
                         <label for="total" class="label">Producto</label>
-                        {{ form.producto }}
+                        <input type="text">
                     </div>
                     <div class="campo">
                         <label for="total" class="label">Vendedor</label>
-                        {{ form.vendedor }}
+                        <input type="text" name="" id="">
                     </div>
                     <div class="campo">
                         <label for="total" class="label">Total</label>
-                        {{ form.total }}
+                       <input type="text">
                     </div>
                 </div>
                 <input type="submit" class="btn" value="Registrar">
