--- a/templates/administrador/admin_vendedor.html
+++ b/templates/administrador/admin_vendedor.html
@@ -70,6 +70,14 @@
                                         <label>Fecha Ingreso</label>
                                         {{ form.fecha_ingreso }}
                                     </div>
+
+                                    {% if form.non_field_errors %}
+                                    <div class="alert">
+                                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                    {{ form.non_field_errors }}
+                                    </div>
+                                    {% endif %}
+                                    
                                     {% for i in form.errors %} {{i}} {% endfor %} 
                                     {% if form.errors %}
                                     <p>error!</p>
