--- a/templates/ventas/mycart.html
+++ b/templates/ventas/mycart.html
@@ -3,9 +3,10 @@
 {% block title %}Mi Carro
 {% endblock title %}
 {% block content %}
+<link rel="stylesheet" href="/static/styles/myCart.css">
 <div class="container">
     <div class="row">
-        <h4>Items en mi carro </h4>
+        <p class="itemsCar">Items en mi carro <p>
         <table>
             <thead>
                 <tr>
@@ -26,22 +27,22 @@
                     <td>{{ c.cantidad }}</td>
                     <td>{{ c.subtotal }}</td>
                     <td>
-                        <a href="{% url 'ventas_app:EditarCarro' c.id %}?action=inc">+</a>
-                        <a href="{% url 'ventas_app:EditarCarro' c.id %}?action=dcr">-</a>
-                        <a href="{% url 'ventas_app:EditarCarro' c.id %}?action=rmv">X</a>
+                        <a class="mas" href="{% url 'ventas_app:EditarCarro' c.id %}?action=inc">+</a>
+                        <a class="menos" href="{% url 'ventas_app:EditarCarro' c.id %}?action=dcr">-</a>
+                        <a class="multi" href="{% url 'ventas_app:EditarCarro' c.id %}?action=rmv">X</a>
                     </td>
                 </tr>
                 {% endfor %}
-                <tr>
-                    <th>Total</th>
-                    <th>{{ carro.total }}</th>
+                <p class="total1">
+                    <p class="total">Total</p>
+                    <p class="carroTotal">{{ carro.total }}</p>
                     {% if carro.productocarro_set.all %}
-                    <th><a href="{% url 'ventas_app:VaciarCarro' %}">Vaciar Carro</a></th>
+                    <p class="vaciarCarro"><a href="{% url 'ventas_app:VaciarCarro' %}">Vaciar Carro</a></p>
                     {% endif %}
-                </tr>
+                </p>
                 {% if carro.productocarro_set.all %}
                 <tr>
-                    <th><a href="{% url 'ventas_app:Facturacion' %}">Generar Factura</a></th>
+                    <p class="generarFac"><a href="{% url 'ventas_app:Facturacion' %}">Generar Factura</a></p>
                 </tr>
                 {% endif %}
             </tbody>
