--- a/templates/administrador/reporteAdmin.html
+++ b/templates/administrador/reporteAdmin.html
@@ -8,9 +8,9 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a href="{% url 'ventas_app:reporteUno' %}" class="boton">Reporte 10 productos mas Vendidos</a>
-            <a class="boton">Reporte clientes con mayor facturacion</a>
-            <a class="boton">Reporte ventas por rango de fechas</a>
+            <a href="{% url 'ventas_app:reporteUnoPDF' %}" class="boton">Reporte 10 productos mas Vendidos</a>
+            <a href="{% url 'ventas_app:reporteDosPDF' %}" class="boton">Reporte clientes con mayor facturacion</a>
+            <a href="{% url 'ventas_app:reporteTres' %}" class="boton">Reporte ventas por rango de fechas</a>
         </div>
     </div>
 
