--- a/templates/ventas/facturacion.html
+++ b/templates/ventas/facturacion.html
@@ -29,7 +29,7 @@
                 </tr>
                 {% endfor %}
                 <tr>
-                    <p class="total">Total: {{ carro.total }} </p>                    
+                    <th class="total">Total: {{ carro.total }} </th>                    
                 </tr>
             </tbody>
         </table>
