--- a/templates/ventas/formularioFactura.html
+++ b/templates/ventas/formularioFactura.html
@@ -29,6 +29,14 @@
                     </div>
                 </div>
                 <input type="submit" class="btn" value="Registrar">
+
+                <div class="Ventanae" id="elimi">
+                    <form action="" method="post">
+                      <h1>La factura fue registrada con éxito! </h1>
+                        <button type="submit" id="Confirmar">Confirmar</button>
+                      </form>
+                  </div>
+
             </form>
         </div>
         <div class="imagen-content">
