--- a/templates/ventas/update.html
+++ b/templates/ventas/update.html
@@ -50,6 +50,14 @@
               </div>
           
                   <button type="submit" class="btn">Actualizar</button>
+
+                  <div class="Ventanae" id="elimi">
+                    <form action="" method="post">
+                      <h1>El producto fue modificado con éxito! </h1>
+                        <button type="submit" id="Confirmar">Confirmar</button>
+                      </form>
+                  </div>
+
                 </form>
               </div>
               <div class="imagen-content">
@@ -59,7 +67,7 @@
           </body>
           <script src="{% static 'scripts/formulariosVenta.js' %}"></script>
           
-                <button type="submit">Actualizar</button>
+                <button type="submit"></button>
             </form>
 
 {% endblock content %}
