--- a/templates/administrador/actualizar_vendedor.html
+++ b/templates/administrador/actualizar_vendedor.html
@@ -73,7 +73,11 @@
                     <button class="boton" type="submit">Actualizar</button>
                 </div>  
             </div>
-            
+            <div class="Ventanae" id="elimi">                           
+                <h1>La actualización fue un éxito!</h1>
+                  <br>
+                  <button type="submit" id="Confirmar">Confirmar</button>
+            </div>
             
         </form>
         
