--- a/templates/ventas/formulario.html
+++ b/templates/ventas/formulario.html
@@ -55,6 +55,13 @@
         {% endif %}
 
         <button type="submit" class="btn">Guardar</button>
+
+        <div class="Ventanae" id="elimi">
+          <form action="" method="post">
+            <h1>El registro fue modificado con éxito! </h1>
+              <button type="submit" id="Confirmar">Confirmar</button>
+            </form>
+        </div>
       </form>
     </div>
     <div class="imagen-content">
