--- a/static/styles/myCart.css
+++ b/static/styles/myCart.css
@@ -3,10 +3,15 @@
 *{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
+    overflow: visible;
+    word-wrap: inherit;
 }
-
+/* .container{
+    
+} */
 section{
     display:flex;
+    
 }
 
 .itemsCar{
@@ -20,10 +25,10 @@ table{
     font-size: 18px;
     margin: 30px;
     border-radius: 12px;
-    position: absolute;
-    left: 35%;
-    top: 25%;
-    margin-left: -100px;
+    position: relative;
+    left: 100%;
+    top: 5%;
+    /* margin-left: 100%; */
    
 }
 th{
@@ -62,22 +67,29 @@ tr .total1{
 tr .total{
     margin: 10px;
     font-size: 17px;
-    position: fixed;
-    left: 44.6%;
+    position: relative;
+    left: 290.6%;
 }
 tr .carroTotal{
     margin: 10px;
     font-size: 17px;
-    position: fixed;
-    left: 51.9%;
+    position: relative;
+    top: -28.5%;
+    left: 450.9%;
 }
-tr .vaciarCarro a{
-    position:relative;
-    left: 535%;
+tr .vaciarCarro{
+    position: relative;
+    top: -63.5%; 
+    left: 754.5%;
+    font-size: 10px;
+
+}
+ .vaciarCarro a{
     font-size: 15px;
     font-weight: normal;
-    color: #553CFB;
+    color: #553CFB;    
 }
+
 .generar{
     border: 0px;
 }
@@ -93,7 +105,7 @@ td .generarFac{
     border: 0px;
     position: relative;
     left: 120%;
-    top: 144%;
+    top: 14%;
 }
 td .generarFac a{
     color: aliceblue;
