--- a/templates/historial/formulario-mascota.html
+++ b/templates/historial/formulario-mascota.html
@@ -27,11 +27,11 @@
                             <label>Especie</label>
                             {{ form.especie }}
                         </div>
-                        <div class="campo">
+                        <div class="campo2">
                             <label>Sexo</label>
                             {{ form.sexo }}
                         </div>
-                        <div class="campo">
+                        <div class="campoEdad">
                             <label>Edad</label>
                             {{ form.edad }}
                         </div>
@@ -41,12 +41,12 @@
                             {{ form.color }}
                         </div>
 
-                        <div class="campo">
+                        <div class="campoCastrado">
                             <label>¿Castrado?</label>
                             {{ form.castrado }}
                         </div>
 
-                        <div class="campo">
+                        <div class="campoCastrado">
                             <label>Estado</label>
                             {{ form.estado }}
                         </div>
