Agregando mas vistas restringidas

--- a/templates/historial/formulario-historial.html
+++ b/templates/historial/formulario-historial.html
@@ -11,7 +11,7 @@
                     {% csrf_token %} 
 
                     <div id="formularioHistorial">
-                        <h3>1.Datos de la mascota y dueño/responsable:</h3>
+                        <h3>1.Datos de la mascota y veterinario:</h3>
                         <div class="campo1">
                             <label>Nombre mascota</label>
                             {{ form.mascota }}
