--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -22,6 +22,7 @@
           <th>Peso</th>
           <th>Temperatura</th>
           <th>Frecuencia Cardiaca</th>
+          <th>Accion</th>
         </tr>
       </thead>
       <tbody>
@@ -36,6 +37,9 @@
           <td>{{ h.peso|truncatechars:10 }}</td>
           <td>{{ h.temperatura|truncatechars:10 }}</td>
           <td>{{ h.frecuencia_cardiaca|truncatechars:10 }}</td>
+          <td>
+            <a href="{% url 'veterinaria_app:detailView' h.id %}">Ver</a>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
