Organizacion de paginacion

--- a/templates/administrador/home-registrar.html
+++ b/templates/administrador/home-registrar.html
@@ -8,9 +8,9 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a href="{% url 'user_app:registrar-vendedor' %}" class="boton">Registrar Vendedor</a>
-            <a href="{% url 'user_app:registrar-veterinario' %}" class="boton">Registrar Veterinario</a>
-            <a href="{% url 'user_app:registrar-admin' %}" class="boton">Registrar Administrador</a>
+            <a href="{% url 'user_app:registrar-vendedor' %}" class="boton"><b>Registrar Vendedor</b></a>
+            <a href="{% url 'user_app:registrar-veterinario' %}" class="boton"><b>Registrar Veterinario</b></a>
+            <a href="{% url 'user_app:registrar-admin' %}" class="boton"><b>Registrar Administrador</b></a>
         </div>
     </div>
 
