--- a/templates/administrador/listado_usuarios_home.html
+++ b/templates/administrador/listado_usuarios_home.html
@@ -8,9 +8,9 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a href="{% url 'user_app:verAdmins' %}" class="boton">Listado administradores</a>
-            <a href="{% url 'user_app:verVendedor' %}" class="boton">Listado Vendedores</a>
-            <a href="{% url 'user_app:verVeterinario' %}" class="boton">Listado Veterinarios</a>
+            <a href="{% url 'user_app:verAdmins' %}" class="boton"><b>Listado administradores</b></a>
+            <a href="{% url 'user_app:verVendedor' %}" class="boton"><b>Listado Vendedores</b></a>
+            <a href="{% url 'user_app:verVeterinario' %}" class="boton"><b>Listado Veterinarios</b></a>
         </div>
     </div>
 
