--- a/static/styles/Administrador/botones.css
+++ b/static/styles/Administrador/botones.css
@@ -1,46 +1,16 @@
-.contenedor{
-    font-family:'Poppins',sans-serif;
-    font-weight: bold;
 
-    display: flex;
-    justify-content: center;
-    
-    border-radius: 12px;
-    margin-left: 100px;
-    margin-top: 50px;
 
-    width: 1000px;
-    height: 500px;
-}
-
-.contenedor-botones
-{
-    display: grid;
-    justify-content: center;
-    /*border: 1px solid black;*/
-}
-.boton{
-
-    display: flex;
-    justify-content: center;
-    font-size: 18px;
-    width: 1100px;  /*ancho*/
-    height: 160px;
-    
-    border: 1px solid rgb(61, 61, 61);
-    background-color: rgb(241, 241, 241);
-    border-radius: 12px;
-
-    padding-top: 60px;
-    text-decoration: none;
-}
-
-.boton:hover 
-{
-    background-color: #a0a9e9;
-    color: white;
-    font-size: 20px;
+.boton {
+    border-radius: 1.2rem;
+    background-color: rgba(132,139,200,0.18);
+    display: block;
+    margin: 10px;
+    padding: 70px;
     text-align: center;
-    width: 1110px;
-    height: 165px;
+    font-size: 20px;
+}
+
+.boton:hover{
+    background-color: #7380ec;
+    color: white;
 }
