--- a/static/styles/Administrador/tabla_admin.css
+++ b/static/styles/Administrador/tabla_admin.css
@@ -166,11 +166,19 @@ td,th{
     float: left;
     padding: 8px 16px;
     text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 0 4px;
   }
   
   .pagination a.active {
     background-color: #7380ec;
     color: white;
+    border: 1px solid #7380ec;
   }
   
-  .pagination a:hover:not(.active) {background-color: #ddd;}
+  .pagination a:hover:not(.active) {
+    background-color: #7380ec;
+    color: white;
+}
