--- a/static/styles/cliente-responsable.css
+++ b/static/styles/cliente-responsable.css
@@ -90,24 +90,34 @@ td,th{
     padding-bottom: 10px;
 }
 
-.pagination {
-    display: inline-block;
-  }
+
 
 .center {
     text-align: center;
 }
+  
+.pagination {
+    display: inline-block;
+  }
   
   .pagination a {
     color: black;
     float: left;
     padding: 8px 16px;
     text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 0 4px;
   }
   
   .pagination a.active {
     background-color: #7380ec;
     color: white;
+    border: 1px solid #7380ec;
   }
   
-  .pagination a:hover:not(.active) {background-color: #ddd;}
+  .pagination a:hover:not(.active) {
+    background-color: #7380ec;
+    color: white;
+}
