--- a/static/styles/historial.css
+++ b/static/styles/historial.css
@@ -109,3 +109,29 @@ td,th{
 .foto{
     text-align: center;
 }
+
+.pagination {
+    display: inline-block;
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 0 4px;
+  }
+  
+  .pagination a.active {
+    background-color: #7380ec;
+    color: white;
+    border: 1px solid #7380ec;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #7380ec;
+    color: white;
+}
