--- a/static/styles/ventas.css
+++ b/static/styles/ventas.css
@@ -80,6 +80,7 @@ td,th{
     height: 26px;
     border-style: solid;
     border-width: 1px;
+    padding-left: 0.5rem;
 }
 .lupa{
     width: 17%;
@@ -171,6 +172,7 @@ td,th{
     text-decoration: none;
     transition: background-color .3s;
     border: 1px solid #ddd;
+    border-radius: 5px;
     margin: 0 4px;
   }
   
@@ -180,4 +182,7 @@ td,th{
     border: 1px solid #7380ec;
   }
   
-  .pagination a:hover:not(.active) {background-color: #ddd;}
+  .pagination a:hover:not(.active) {
+    background-color: #7380ec;
+    color: white;
+}
