--- a/templates/historial/mascotas.html
+++ b/templates/historial/mascotas.html
@@ -55,27 +55,27 @@
  <div class="center">
 
     <div class="pagination">
-      
-      {% if is_paginated %}
-      {% if page_obj.has_previous %}
-      <a href="?page={{ page_obj.previous_page_number }}">&laquo;</a>  
-      {% endif %}
-      
-      {% for pagina in paginator.page_range %}
-      {% if pagina == page_obj.number  %}
-      <a class="active" href="?page={{ pagina }}">{{ pagina }}</a>
-      {% else %}
-      <a href="?page={{ pagina }}">{{ pagina }}</a> 
-      {% endif %}
-      {% endfor %}
-      
-      {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}">&raquo;</a>   
-      {% endif %}
-      
-      {% endif %}
-      
-    </div>
+    
+        {% if is_paginated %}
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}"><b>&laquo;</b></a>  
+        {% endif %}
+        
+        {% for pagina in paginator.page_range %}
+        {% if pagina == page_obj.number  %}
+        <a class="active" href="?page={{ pagina }}"><b>{{ pagina }}</b></a>
+        {% else %}
+        <a href="?page={{ pagina }}"><b>{{ pagina }}</b></a> 
+        {% endif %}
+        {% endfor %}
+        
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}"><b>&raquo;</b></a>   
+        {% endif %}
+        
+        {% endif %}
+        
+      </div>
   </div>
     <!-- FIN bloque de paginacion -->
     
